added more update

--- a/views/includes/admin/home-icons.ejs
+++ b/views/includes/admin/home-icons.ejs
@@ -1,47 +1,15 @@
 <ul>
     <li>
-        <a href="#"><span class="stats_icon current_work_sl"></span><span
+        <a href="onboarded/users"><span class="stats_icon current_work_sl"></span><span
                 class="label">Analytics</span></a>
     </li>
-    <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><span
-                class="stats_icon user_sl"><span class="alert_notify orange">30</span></span><span
+    <li><a href="users"><span
+                class="stats_icon user_sl"></span><span
                 class="label"> Users</span></a>
-        <div class="notification_list dropdown-menu blue_d">
-            <div class="white_lin nlist_block">
-                <ul>
-                    <li>
-                        <div class="nlist_thumb">
-                            <img src="images/photo_60x60.jpg" width="40" height="40" alt="img">
-                        </div>
-                        <div class="list_inf">
-                            <a href="#">Cras erat diam, consequat quis tincidunt nec, eleifend.</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nlist_thumb">
-                            <img src="images/photo_60x60.jpg" width="40" height="40" alt="img">
-                        </div>
-                        <div class="list_inf">
-                            <a href="#">Donec neque leo, ullamcorper eget aliquet sit amet.</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nlist_thumb">
-                            <img src="images/photo_60x60.jpg" width="40" height="40" alt="img">
-                        </div>
-                        <div class="list_inf">
-                            <a href="#">Nam euismod dolor ac lacus facilisis imperdiet.</a>
-                        </div>
-                    </li>
-                </ul>
-                <span class="btn_24_blue"><a href="#">View All</a></span>
-            </div>
-        </div>
     </li>
-    <li><a href="#"><span class="stats_icon administrative_docs_sl"></span><span
+    <li><a href=""><span class="stats_icon administrative_docs_sl"></span><span
                 class="label">Content</span></a></li>
-    <li><a href="#"><span class="stats_icon finished_work_sl"><span
-                    class="alert_notify blue">30</span></span><span class="label">Task
+    <li><a href="#"><span class="stats_icon finished_work_sl"></span><span class="label">Task
                 List</span></a>
     </li>
     <li><a href="#"><span class="stats_icon config_sl"></span><span
@@ -58,15 +26,13 @@
     <li><a href="#"><span class="stats_icon category_sl"></span><span
                 class="label">Explorer</span></a>
     </li>
-    <li><a href="#"><span class="stats_icon calendar_sl"><span
-                    class="alert_notify orange">30</span></span><span
+    <li><a href="#"><span class="stats_icon calendar_sl"></span><span
                 class="label">Events</span></a>
     </li>
     <li><a href="#"><span class="stats_icon lightbulb_sl"></span><span
                 class="label">Support</span></a>
     </li>
-    <li><a href="#"><span class="stats_icon bank_sl"><span
-                    class="alert_notify blue">30</span></span><span class="label">Order
+    <li><a href="#"><span class="stats_icon bank_sl"></span><span class="label">Order
                 List</span></a>
     </li>
 </ul>
