--- a/views/includes/admin/header-banner.ejs
+++ b/views/includes/admin/header-banner.ejs
@@ -13,7 +13,7 @@
     </div>
     
     <div class="header_right">
-        <div id="top_notification">
+        <!-- <div id="top_notification">
             <ul>
                 <li class="dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle alert"><span
@@ -88,7 +88,7 @@
                     </div>
                 </li>
             </ul>
-        </div>
+        </div> -->
         <div id="user_nav">
             <ul>
                 <li class="user_thumb"><a href="#"><span class="icon"><img src="images/user_thumb.png"
