--- a/views/includes/admin/home-icons.ejs
+++ b/views/includes/admin/home-icons.ejs
@@ -3,36 +3,36 @@
         <a href="onboarded/users"><span class="stats_icon current_work_sl"></span><span
                 class="label">Analytics</span></a>
     </li>
-    <li><a href="users"><span
+    <li><a href="/users"><span
                 class="stats_icon user_sl"></span><span
                 class="label"> Users</span></a>
     </li>
-    <li><a href=""><span class="stats_icon administrative_docs_sl"></span><span
+    <li><a href="/vehicle/assignments"><span class="stats_icon administrative_docs_sl"></span><span
                 class="label">Content</span></a></li>
     <li><a href="#"><span class="stats_icon finished_work_sl"></span><span class="label">Task
                 List</span></a>
     </li>
-    <li><a href="#"><span class="stats_icon config_sl"></span><span
+    <!-- <li><a href="#"><span class="stats_icon config_sl"></span><span
                 class="label">Settings</span></a>
-    </li>
+    </li> -->
     <li><a href="#"><span class="stats_icon archives_sl"></span><span
                 class="label">Archive</span></a>
     </li>
     <li><a href="#"><span class="stats_icon address_sl"></span><span
                 class="label">Contact</span></a>
     </li>
-    <li><a href="#"><span class="stats_icon folder_sl"></span><span class="label">Media</span></a>
+    <li><a href="expense/manage"><span class="stats_icon folder_sl"></span><span class="label">Media</span></a>
     </li>
-    <li><a href="#"><span class="stats_icon category_sl"></span><span
+    <li><a href="vendor/manage"><span class="stats_icon category_sl"></span><span
                 class="label">Explorer</span></a>
     </li>
     <li><a href="#"><span class="stats_icon calendar_sl"></span><span
                 class="label">Events</span></a>
     </li>
-    <li><a href="#"><span class="stats_icon lightbulb_sl"></span><span
+    <!-- <li><a href="#"><span class="stats_icon lightbulb_sl"></span><span
                 class="label">Support</span></a>
-    </li>
-    <li><a href="#"><span class="stats_icon bank_sl"></span><span class="label">Order
+    </li> -->
+    <!-- <li><a href="#"><span class="stats_icon bank_sl"></span><span class="label">Order
                 List</span></a>
-    </li>
+    </li> -->
 </ul>
